# openCAPWAP-OpenWRT

./: .gitignore  AC.c  ACAppsProtocol.h  ACBinding.c  ACBinding.h  ACConfigFile.c  ACConfigureState.c  ACDataCheckState.c  ACDiscoveryState.c  ACInterface.c  ACInterface.h  ACJoinState.c  ACMainLoop.c  ACMultiHomedSocket.c  ACMultiHomedSocket.h  ACProtocol.c  ACProtocol.h  ACProtocol_User.c  ACRetransmission.c  ACRunState.c  ACSettingsFile.c  ACipcHostapd.c  ACipcHostapd.h  COPYING  CWAC.h  CWBinding.c  CWBinding.h  CWCommon.c  CWCommon.h  CWConfigFile.c  CWConfigFile.h  CWErrorHandling.c  CWErrorHandling.h  CWFreqPayloads.h  CWList.c  CWList.h  CWLog.c  CWLog.h  CWNetwork.c  CWNetwork.h  (+87 more)
hostapd_wrapper/: README.rst  hostapd-capwap.patch  hostapd.conf-ac  hostapd.conf-wtp  hostapd_wtp.conf
hostapd_wrapper/hostapd2/: README.Debian  hostapd-20130302-linux.patch  hostapd-20130302.tar.bz2  hostapd_linux.conf  hostapd_linux_ac.conf  linux-ac.sh
hostapd_wrapper/src/capwap/: capwap_mgmt_frame_ac.c  capwap_mgmt_frame_ac.h  capwap_mgmt_frame_wtp.c  capwap_mgmt_frame_wtp.h  file_conf_ac.h  file_conf_wtp.h  ipc_capwap_ac.c  ipc_capwap_ac.h  ipc_capwap_wtp.c  ipc_capwap_wtp.h  smac_code.h
hostapd_wrapper/src/drivers/: driver_capwap.c  driver_capwap_wtp.c  netlink_fake.c
hostapd_wrapper/wrapper_ac/capwap/: capwap_mgmt_frame.c  capwap_mgmt_frame.h  file_conf.h  ipc_capwap_ac.c  ipc_capwap_ac.h  smac_code.h
hostapd_wrapper/wrapper_ac/drivers/: driver_capwap.c  linux_ioctl_fake.c  netlink_fake.c
hostapd_wrapper/wrapper_wtp/capwap/: capwap_mgmt_frame.c  capwap_mgmt_frame.h  file_conf.h  ipc_capwap_wtp.c  ipc_capwap_wtp.h  smac_code.h  switch_8023_80211.c  switch_8023_80211.h
hostapd_wrapper/wrapper_wtp/drivers/: driver_capwap_wtp.c
include/openssl/: engine.h  evp.h  opensslconf-i386.h  opensslv.h  pem.h  ssl.h  ssl3.h  tls1.h  x509.h
wum/: Makefile  README  wum.c  wumLib.c  wumLib.h
